# iata_bcbp

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
master/: aliases.js  search-index.js
master/iata_bcbp/: Bcbp.t.html  Leg.t.html  all.html  enum.Error.html  enum.Field.html  fn.from_str.html  index.html  sidebar-items.js  struct.Bcbp.html  struct.Leg.html  struct.SecurityData.html  type.Result.html
master/iata_bcbp/bcbp/: SecurityData.t.html  struct.Bcbp.html  struct.Leg.html  struct.SecurityData.html
master/iata_bcbp/de/field/: enum.Field.html
master/iata_bcbp/de/parser/: fn.from_str.html
master/iata_bcbp/error/: enum.Error.html  type.Result.html
master/implementors/core/clone/: trait.Clone.js
master/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
master/implementors/core/default/: trait.Default.js
master/implementors/core/fmt/: trait.Debug.js  trait.Display.js
master/implementors/core/hash/: trait.Hash.js
master/implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
master/implementors/core/str/: trait.FromStr.js
master/implementors/std/error/: trait.Error.js
master/log/: index.html  struct.SetLoggerError.html
master/src/iata_bcbp/: error.rs.html  lib.rs.html
src/: error.rs  field.rs  lib.rs  parser.rs  scanner.rs
src/bcbp/: field_types.rs  mod.rs
src/bcbp/fields/: mod.rs
src/de/: field.rs  mod.rs  parser.rs
src/ffi/: mod.rs
src/tests/: guide.rs
tests/: guide.rs  iata_792_b.rs  invalid_input.rs  not_yet_supported.rs  real_world.rs
(+4 files in other folders)
