[package]
name = "iata_bcbp"
version = "1.0.0"
authors = ["Martin Mroz <martinmroz@gmail.com>"]
repository = "https://github.com/martinmroz/iata_bcbp.git"
homepage = "https://github.com/martinmroz/iata_bcbp.git"
license = "MIT"
readme = "README.md"
documentation = "https://martinmroz.github.io/iata_bcbp/master/iata_bcbp/"
description = "IATA BCBP Parser in Rust Based on Resolution 792"
edition = "2018"

[dependencies]
arrayvec = "0.4"

[dependencies.nom]
version = "^5"
features = []
